k8s/gitlab/gitlab-standalone.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab

---
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  namespace: gitlab
spec:
  ports:
  - name: httpport
    port: 80
    protocol: TCP
    targetPort: 80
  - name: httpsport
    port: 443
    protocol: TCP
    targetPort: 443
  - name: sshport
    port: 22
    protocol: TCP
    targetPort: 22
  selector:
    app: gitlab

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitlab
  name: gitlab
  namespace: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      serviceAccountName: gitlab
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:12.4.0-ce.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: httpport
          containerPort: 80
          protocol: TCP
        - name: httpsport
          containerPort: 443
          protocol: TCP
        - name: sshport
          containerPort: 22
          protocol: TCP
#        readinessProbe:
#          initialDelaySeconds: 300
#          timeoutSeconds: 5
#          tcpSocket:
#            port: 80
        stdin: true
        tty: true
        volumeMounts:
        - name: gitlab-data
          mountPath: /var/opt/gitlab
          subPath: gldata
        - name: gitlab-data
          mountPath: /etc/gitlab
          subPath: glconfig
        - name: gitlab-logs
          mountPath: /var/log/gitlab
        securityContext:
          privileged: true
      volumes:
      - name: gitlab-logs
        emptyDir: {}
      - name: gitlab-config
        configMap:
          name: gitlab-config
          items:
          - key: gitlab.rb
            path: gitlab.rb
## FEATURE:PERSISTENT
      - name: gitlab-data
        persistentVolumeClaim:
          claimName: pvc-gitlab
## FEATURE:WITHOUT PERSISTENT
#      - name: gitlab-data
#        emptyDir: {}

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
spec:
  rules:
  - host: gitlab.10.100.254.176.xip.io
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
        path: /
